# personal_finance_tool

./: .env  .gitignore  .gitmodules  .test.env  Dockerfile  Pipfile  Procfile  README.md  TODO  config.py  docker-compose.yml  pft.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pft.yml
alembic/: env.py
alembic/versions/: 24015b0d7669_added_date_transaction.py  6cd415fe53df_initial_commit.py  86821a36a853_add_fastapi_google_oauth.py  c5f38a84314c_add_transaction_table.py  d365b9b6a097_add_transaction_table.py  fdcc7a2a72f6_added_tags_to_transaction.py
app/: __init__.py  alembic.ini  app.py  background_tasks.py  config.py  dbutils.py  forms.py  models.py  oauth.py  post_request_methods.py  routes.py  settings.py  users.py  utils.py
app/alembic/: env.py
app/auth/: email.py  forms.py  jwt.py  routes.py
app/crud/: __init__.py  base.py  crud_transaction.py  filters.py
app/endpoints/: auth.py  transactions.py
app/fastapi_users/: __init__.py
app/fastapi_utils/: cbv.py
app/forms/: form_handler.py  forms.py
app/routes/: __init__.py  homepage_routes.py  login_routes.py  overview_routes.py  tax_routes.py
app/sqldb/: dbutils.py  models.py  prognoses.py  transactions.py
app/static/: calendar_date_change.js  form_edit.js  navbar.js  plots.js  prognosis_adaptation_function.js  styles.css  transaction_adaptation_functions.js  yearly_overview.js
app/storage/: db.py  mixins.py  models.py  schemas.py  (+2 more)
db/: model.py  pftdb.py
migrations/: alembic.ini  env.py
tests/: conftest.py  test_app.py  test_db.py
tools/: __init__.py  dateutils.py
(+88 files in other folders)
